
SET(PYTHON_SOURCES 
  ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py
  ${CMAKE_CURRENT_SOURCE_DIR}/HDF_Archive_basic_layer_h5py.py
  ${CMAKE_CURRENT_SOURCE_DIR}/HDF_Archive.py
  ${CMAKE_CURRENT_SOURCE_DIR}/HDF_Archive_Schemes.py
)

install (FILES ${PYTHON_SOURCES} DESTINATION ${TRIQS_PYTHON_LIB_DEST}/Base/Archive)

