
SET(PYTHON_SOURCES 
  ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py
  ${CMAKE_CURRENT_SOURCE_DIR}/Injector.py
  ${CMAKE_CURRENT_SOURCE_DIR}/Dichotomy.py
  ${CMAKE_CURRENT_SOURCE_DIR}/Distribution_on_nodes.py
  #  ${CMAKE_CURRENT_SOURCE_DIR}/Init.py
  ${CMAKE_CURRENT_SOURCE_DIR}/MPI.py
  ${CMAKE_CURRENT_SOURCE_DIR}/myUtils.py
  ${CMAKE_CURRENT_SOURCE_DIR}/Parameters.py
  ${CMAKE_CURRENT_SOURCE_DIR}/TestDiff.py
  ${CMAKE_CURRENT_SOURCE_DIR}/Redirect.py
)

install (FILES ${PYTHON_SOURCES} DESTINATION ${TRIQS_PYTHON_LIB_DEST}/Base/Utility)


